<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/first_page_title"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_host_label"/>

            <EditText
                android:id="@+id/serverHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_host_hint"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_port_label" />

            <EditText
                android:id="@+id/serverPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_port_hint"
                android:inputType="number"
                android:layout_marginBottom="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name_label" />

            <EditText
                android:id="@+id/deviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/device_name_hint"
                android:layout_marginBottom="15dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/toogleNotifSound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toogle_notif_sound_text"/>

<!--            <androidx.appcompat.widget.SwitchCompat-->
<!--                android:id="@+id/toogleSendStats"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/toogle_send_stats_text"/>-->


<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Intervalle de Rafraîchissement (en secondes)" />-->

<!--            <EditText-->
<!--                android:id="@+id/refreshInterval"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:hint="Intervalle"-->
<!--                android:inputType="number"-->
<!--                android:layout_marginBottom="25dp"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/save_btn_text" />

            <Button
                android:id="@+id/connectButton"
                android:layout_width="252dp"
                android:layout_height="wrap_content"
                android:text="@string/connect_btn_text" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginTop="30dp"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/disconnectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/disconnect_btn_text"
                    android:textColorLink="#673AB7" />

                <Button
                    android:id="@+id/testNotifButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/test_notif_btn_text" />

            </LinearLayout>



        </LinearLayout>
    </ScrollView>


</LinearLayout>
